--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -6,4 +6,12 @@
     android:layout_height="match_parent"
     tools:context=".view.DetailActivity">
 
+    <TextView
+        android:id="@+id/tv_title"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:text="Title"
+        android:textSize="32sp"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
